# cardano-loans

./: Benchmarks.md  CHANGELOG-archive.md  CHANGELOG.md  GettingStarted.md  LICENCE.md  README.md  Tests.md  VERSIONS.md  cabal.project  cardano-loans.cabal
aiken/: aiken.toml  plutus.json
aiken/cardano_loans/: aiken.toml
aiken/cardano_loans/.github/workflows/: tests.yml
aiken/cardano_loans/validators/: cardano_loans.ak
aiken/lib/cardano_loans/: accept_validation.ak  address_update_validation.ak  ask_validation.ak  burn_and_claim_validation.ak  burn_and_unlock_validation.ak  interest_validation.ak  observe_payment.ak  offer_validation.ak  payment_validation.ak  rollover_validation.ak  types.ak  update_address_validation.ak  utils.ak
aiken/lib/cardano_loans/data/: core.ak  datums.ak  redeemers.ak
aiken/validators/: cardano_loans.ak
app/: Main.hs
app/CLI/: BlockfrostApi.hs  Parsers.hs  Query.hs  Run.hs  Types.hs
app/CLI/Data/: ApiService.hs  Asset.hs  Bech32Address.hs  Commands.hs  CreditHistory.hs  LoanHistory.hs  LoanUTxO.hs  Network.hs  Output.hs  PersonalUTxO.hs  Transaction.hs  TxCBOR.hs
app/CLI/Query/: Koios.hs
architectural-decisions/: 001-liquidity-pools-vs-atomic-utxos.md  002-proxy-script.md  003-payment-datum.md
scripts/: accept-offer.sh  claim-expired-loan.sh  claim-paid-loan.sh  clean-up-finished-loan.sh  close-ask.sh  close-offer.sh  create-ask.sh  create-mint-reference-script.sh  create-offer.sh  create-spend-reference-script.sh  fully-repay-loan.sh  partial-payment.sh  rollover.sh  update-lender-address.sh
scripts/local-node/: accept-offer.sh  apply-interest.sh  burn-extra-keys.sh  claim-expired.sh  close-ask.sh  close-offer.sh  create-ask.sh  create-offer.sh  make-payment.sh  terminate-early.sh  unlock-finished.sh  unlock-lost.sh  update-lender-address.sh
scripts/local-node/create-reference-scripts/: create-active-reference-script.sh  create-address-update-reference-script.sh  create-interest-reference-script.sh  create-loan-reference-script.sh  create-negotiation-reference-script.sh  create-payment-reference-script.sh  create-proxy-reference-script.sh  register-scripts.sh
scripts/local-node/mint-test-tokens/: mint.sh
src/: CardanoLoans.hs
src/CardanoLoans/: Blueprints.hs  Types.hs  Utils.hs
test/: Test.hs
test/Test/: AcceptOffer.hs  ActiveUTxOs.hs  Ask.hs  AskUTxOs.hs  Beacons.hs  Claim.hs  ClaimExpired.hs  ClaimLost.hs  CloseAsk.hs  CloseOffer.hs  Common.hs  Config.hs  CreateAsk.hs  CreateOffer.hs  Internal.hs  MakePayment.hs  Offer.hs  OfferUTxOs.hs  Prelude.hs  Proxy.hs  RepayLoan.hs  Rollover.hs  Unlock.hs  UpdateAddress.hs  UpdateAsk.hs  UpdateLenderAddress.hs  UpdateOffer.hs
test/Test/ActiveUTxOs/: AcceptOffer.hs  ApplyInterest.hs  ClaimDefaultedCollateral.hs  ClaimExpiredCollateral.hs  MakePayment.hs  Misc.hs  Unlock.hs  UpdateLenderAddress.hs
test/Test/ActiveUTxOs/AcceptOffer/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ActiveUTxOs/ApplyInterest/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ActiveUTxOs/ClaimDefaultedCollateral/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ActiveUTxOs/ClaimExpiredCollateral/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ActiveUTxOs/MakePayment/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ActiveUTxOs/Unlock/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ActiveUTxOs/UpdateLenderAddress/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/AskUTxOs/: CloseAsk.hs  CreateAsk.hs  Misc.hs  UpdateAsk.hs
test/Test/AskUTxOs/CloseAsk/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/AskUTxOs/CreateAsk/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/AskUTxOs/UpdateAsk/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/OfferUTxOs/: CloseOffer.hs  CreateOffer.hs  Misc.hs  UpdateOffer.hs
test/Test/OfferUTxOs/CloseOffer/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/OfferUTxOs/CreateOffer/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/OfferUTxOs/UpdateOffer/: Benchmarks.hs  Failures.hs  Regressions.hs
