cabal-version:      2.4
name:               cardano-loans
version:            0.2.0.0

synopsis: A distributed Cardano P2P Lending dApp PoC.
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2023 fallen-icarus
extra-source-files: CHANGELOG.md

common lang
  build-depends: base ^>=4.14
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints

common internals
  build-depends:
      cardano-api
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-script-utils
    , plutus-core
    , cardano-node-emulator
    , containers

library
  import: lang, internals
  exposed-modules: CardanoLoans
  build-depends:
    bytestring,
    serialise,
    aeson,
    text
  hs-source-dirs: src
  ghc-options: 
    -fobject-code 
    -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas 
    -fno-specialise

test-suite cardano-loans-tests
  import: lang, internals
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wno-deprecations -Wno-unused-matches
    -Wno-unused-local-binds -Wno-unused-top-binds
  other-modules:
      Test.Common,
      Test.CreateAsk,
      Test.AcceptOffer,
      Test.ClaimExpired,
      Test.ClaimLost,
      Test.CloseAsk,
      Test.CloseOffer,
      Test.CreateOffer,
      Test.MakePayment,
      Test.Rollover,
      Test.UpdateAddress
  build-depends:
      cardano-loans
    , plutus-contract
    , plutus-tx-constraints
    , aeson
    , text
    , data-default
    , tasty
    , lens
    , tasty-hunit

executable cardano-loans
    import: lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      CLI.Types,
      CLI.Parsers,
      CLI.Run,
      CLI.BlockfrostApi,
      CLI.Query
    build-depends:    
      cardano-loans,
      optparse-applicative,
      servant,
      aeson,
      servant-client,
      http-client,
      http-client-tls,
      text,
      containers,
      vector,
      aeson-pretty,
      bytestring,
      utf8-string,
      cardano-addresses,
      file-embed
    ghc-options: -O2
    hs-source-dirs:   app