cabal-version:      2.4
name:               cardano-loans
version:            0.2.0.0

synopsis: A distributed Cardano P2P Lending/Borrowering protocol.
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2023 fallen-icarus
extra-source-files: 
  CHANGELOG.md,
  aiken/plutus.json

common lang
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    ImportQualifiedPost
    NamedFieldPuns
    NumericUnderscores
    TupleSections
    TypeApplications

common internals
  build-depends:
      cardano-api
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-core
    , plutus-script-utils
    , containers
    , aeson
    , text
    , bytestring
    , prettyprinter

library
  import:
      lang
    , internals
  exposed-modules: 
      CardanoLoans
    , CardanoLoans.Blueprints
    , CardanoLoans.Types
    , CardanoLoans.Utils
  build-depends:
      serialise
    , file-embed
    , base16-bytestring
    , relude
    , microlens
  hs-source-dirs: src

test-suite cardano-loans-tests
  import: 
    lang,
    internals
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wno-unused-matches -Wno-unused-local-binds 
  other-modules:
  build-depends:
      cardano-loans
    , data-default
    , tasty
    , tasty-hunit
    , microlens
    , mtl
    , cardano-node-emulator

executable cardano-swaps
    import: 
      lang,
      internals
    main-is: Main.hs
    other-modules:
    build-depends:    
      cardano-loans,
      optparse-applicative,
      servant,
      servant-client,
      http-client,
      http-client-tls,
      vector,
      aeson-pretty,
      file-embed,
      prettyprinter-ansi-terminal
    hs-source-dirs: app
    default-extensions:
      OverloadedStrings
      RecordWildCards
